// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSyntheticHistory > renders Alex Rivera identically 1`] = `
{
  "sessions": [
    {
      "date": "2026-06-28",
      "duration": 37,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-06-29",
      "duration": 57,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-06-30",
      "duration": 54,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-04",
      "duration": 32,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-05",
      "duration": 57,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-06",
      "duration": 60,
      "feedbackBody": 5,
      "feedbackComment": "Better than last week, still cautious on the descents.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-07",
      "duration": 49,
      "feedbackBody": 5,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-11",
      "duration": 50,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-12",
      "duration": 59,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-13",
      "duration": 41,
      "feedbackBody": 4,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-14",
      "duration": 38,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-18",
      "duration": 55,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-19",
      "duration": 47,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-20",
      "duration": 33,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-21",
      "duration": 60,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-25",
      "duration": 47,
      "feedbackBody": 4,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-26",
      "duration": 32,
      "feedbackBody": 4,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-27",
      "duration": 58,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-28",
      "duration": 35,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-02",
      "duration": 55,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-03",
      "duration": 36,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-04",
      "duration": 58,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-08",
      "duration": 59,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-09",
      "duration": 37,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-10",
      "duration": 57,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-11",
      "duration": 55,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-16",
      "duration": 53,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-17",
      "duration": 53,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-18",
      "duration": 46,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-22",
      "duration": 52,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-23",
      "duration": 60,
      "feedbackBody": 5,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-24",
      "duration": 46,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-25",
      "duration": 38,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-29",
      "duration": 57,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-30",
      "duration": 46,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-31",
      "duration": 34,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-09-01",
      "duration": 54,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
  ],
  "unavailableDates": [
    "2026-07-10",
    "2026-08-01",
    "2026-08-21",
  ],
}
`;

exports[`generateSyntheticHistory > renders Sam Chen identically 1`] = `
{
  "sessions": [
    {
      "date": "2026-06-26",
      "duration": 116,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-06-27",
      "duration": 63,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-06-28",
      "duration": 44,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-06-29",
      "duration": 100,
      "feedbackBody": 5,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-06-30",
      "duration": 58,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-02",
      "duration": 121,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-03",
      "duration": 60,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-04",
      "duration": 43,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-05",
      "duration": 114,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-06",
      "duration": 54,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-07",
      "duration": 75,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-09",
      "duration": 60,
      "feedbackBody": 3,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-10",
      "duration": 48,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-11",
      "duration": 102,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-12",
      "duration": 63,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-13",
      "duration": 73,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-14",
      "duration": 103,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-17",
      "duration": 116,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-18",
      "duration": 62,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-19",
      "duration": 72,
      "feedbackBody": 3,
      "feedbackComment": "Held the numbers but it cost me.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-20",
      "duration": 119,
      "feedbackBody": 5,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-21",
      "duration": 64,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-23",
      "duration": 105,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-24",
      "duration": 63,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-25",
      "duration": 72,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-26",
      "duration": 108,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-27",
      "duration": 63,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-28",
      "duration": 45,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-30",
      "duration": 64,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-31",
      "duration": 63,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-01",
      "duration": 105,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-02",
      "duration": 58,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-03",
      "duration": 46,
      "feedbackBody": 2,
      "feedbackComment": "Better than last week, still cautious on the descents.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-04",
      "duration": 107,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-07",
      "duration": 105,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-08",
      "duration": 66,
      "feedbackBody": 5,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-09",
      "duration": 46,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-10",
      "duration": 101,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-11",
      "duration": 65,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-13",
      "duration": 107,
      "feedbackBody": 3,
      "feedbackComment": "Better than last week, still cautious on the descents.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-14",
      "duration": 59,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-15",
      "duration": 42,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-16",
      "duration": 109,
      "feedbackBody": 4,
      "feedbackComment": "Better than last week, still cautious on the descents.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-17",
      "duration": 59,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-18",
      "duration": 70,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-20",
      "duration": 61,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-21",
      "duration": 49,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-22",
      "duration": 106,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-23",
      "duration": 54,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-24",
      "duration": 71,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-25",
      "duration": 112,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-27",
      "duration": 45,
      "feedbackBody": 5,
      "feedbackComment": "Held the numbers but it cost me.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-28",
      "duration": 116,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-29",
      "duration": 59,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-30",
      "duration": 73,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-31",
      "duration": 111,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-09-01",
      "duration": 55,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
  ],
  "unavailableDates": [
    "2026-07-08",
    "2026-07-29",
    "2026-08-19",
  ],
}
`;
